# jax-scipy-spatial

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: run_tests.yml
src/jax_scipy_spatial/: distance.py  knn.py  transform.py
tests/: scipy_spatial_distance_test.py  scipy_spatial_knn_test.py  scipy_spatial_test.py  scipy_spatial_transform_test.py
