[project]
name = "jax-scipy-spatial"
version = "0.1.0"
description = "Scipy spatial API for JAX"
authors = [
    { name = "Chris Flesher", email = "chris.flesher@gmail.com" }
]
keywords = ["jax", "scipy", "spatial", "rotation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax",
    "jaxlib",
]

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
