[project]
name = "jax-scipy-spatial"
version = "0.2.0"
description = "Scipy spatial API for JAX"
readme = "README.md"
authors = [
    { name = "Chris Flesher", email = "chris.flesher@gmail.com" }
]
keywords = ["jax", "scipy", "spatial", "rotation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax",
    "jaxlib",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/chrisflesher/jax-scipy-spatial"
"Bug Tracker" = "https://github.com/chrisflesher/jax-scipy-spatial/issues"


[project.optional-dependencies]
dev = [
    "tox",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
